Cálculos 4 barras geometría

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-/dirección.pdf
-/4barras.pdf
-/cálculos_sus.pdf
-/cálculos_esfuerzos_sus.pdf
 /__pycache__
-/desktop.ini
+/resultados
+
+*.ini
+*.pdf
